# Archimedes

./: .env.example  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Makefile  PATCH_NOTES.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Pre-flight/: Archimedes_Consolidated_Audit_2026-04-07.md  README.md  batch_ingest.py  notebook_ocr.py  notebook_vision_test.py  preflight_check.sh  voice_pipe.sh
backend/: Dockerfile
backend/app/: db.py  main.py
backend/app/api/: approvals.py  asana_webhooks.py  health.py  routes.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_approval.py  test_artifact_upload.py  test_asana_webhooks.py  test_document_ingest.py  test_evidence.py  test_filesystem_scanner.py  test_policy_contracts.py  test_propagation.py  test_replay_determinism.py  test_scope_gate.py  test_sync.py
docs/: architecture_boundary_freeze.md  runbook_ollama_migration.md  runbook_startup.md  strategic_trajectory.md  workflow_catalog_v0.1.md
docs/provenance/: README.md
infra/compose/: compose.enc.env  docker-compose.dev.yml  docker-compose.ollama-remote.yml  init-databases.sql  litellm-config.remote-ollama.yaml  litellm-config.yaml
infra/scripts/: capture-provenance.sh  decrypt-env.sh  validate-stack.sh
infra/secrets/: asana.enc.env  compose.enc.env  runtime.enc.env
ingestion_scripts/: notebook_ocr.py  preflight_check.sh  voice_pipe.sh
ops_console/streamlit_app/: drift_queue.py  health.py  runs.py
tests/: conftest.py  test_asana_adapter.py  test_health.py  test_sync.py
(+47 files in other folders)
